@@ -21,6 +21,9 @@ Changes in the next release:
   InstallDir and InstallMode and otherwise behaves identical to the Header
   template used multiple times, manually.
 
+* The configure script now acceps but ignores --with-libtool-sysroot for
+  compatibility with some build systems.
+
 Changes in 0.4.2:
 
 * The PVS module no longer fails when running the pvs-report target.
